# barebones-x86-linux

./: Cargo.toml  compile_markdown.sh  slides.md
.cargo/: config
src/: allocator.rs  env.rs  executor.rs  ffi.rs  fs.rs  io.rs  lang_items.rs  lib.rs  logger.rs  main.rs  stack_protection.rs  start.rs  sync.rs  syscalls.rs  tests.rs  thread.rs  tls.rs  util.rs
src/syscalls/: helper.rs  mod.rs  raw.rs
