[package]
name = "barebones-x86-linux"
version = "0.1.0"
authors = ["soruh <mail@soruh.de>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
# debug = true

[dependencies]
bitflags = "1.2.1"
compiler_builtins = { version = "0.1.39", features = ["mem"] }
log = { version = "0.4.14", features = ["max_level_trace", "release_max_level_trace"] }
smallstr = "0.2.0"
smallvec = { version = "1.6.1", features = ["const_generics"] }
